--- a/SBPplus/src/main/resouces/i18n/Messages.properties
+++ b/SBPplus/src/main/resouces/i18n/Messages.properties
@@ -7,6 +7,7 @@ vo.rm.success={0}\u5220\u9664\u6210\u529F\uFF01
 vo.em.failure={0}\u5220\u9664\u5931\u8D25\uFF01
 service.failure.error={0}\u5931\u8D25\uFF01\u670D\u52A1\u5668\u51FA\u73B0\u5F02\u5E38\uFF01
 # validate
+code.null=\u9A8C\u8BC1\u7801\u4E0D\u80FD\u4E3A\u7A7A
 validate.null=\u6570\u636E\u4E0D\u80FD\u4E3A\u7A7A\uFF01
 validate.phone=\u60A8\u8F93\u5165\u7684\u624B\u673A\u53F7\u7801\u6709\u8BEF\uFF01
 validate.double=\u6570\u636E\u5FC5\u987B\u662F\u6570\u5B57\uFF01
