--- a/SBPplus/src/main/resouces/i18n/Pages.properties
+++ b/SBPplus/src/main/resouces/i18n/Pages.properties
@@ -1,4 +1,4 @@
-error.page=/error.html
+error.page=/interceptor_error
 forward.page=/forward.jsp
 login.success.page=/pages/index.jsp
 login.page=/login.jsp
